--- a/aurum/style.css
+++ b/aurum/style.css
@@ -25,13 +25,14 @@
 
 .user-image-container img{
     border-radius: 50%;
+    cursor: pointer;
 }
 
-.user-image-container:hover .user-menu-drop-down{
-    display:block;
-}
+/*.user-image-container:hover .user-menu-drop-down{*/
+    /*display:block;*/
+/*}*/
 
-.user-menu-drop-down{
+.user-menu-drop-down-custom{
     background-color: rgba(255, 255, 255, 0.91);
     display: none;
     position: absolute;
@@ -42,14 +43,14 @@
     /*width: 100px;*/
 }
 
-.user-menu-drop-down li{
+.user-menu-drop-down-custom li{
     display: block!important;
     font-size: 15px;
     text-align: left;
     margin: 0!important;
 }
 
-.user-menu-drop-down li a{
+.user-menu-drop-down-custom li a{
     padding: 5px 10px 5px 10px;
     color: black;
     white-space: nowrap;
@@ -57,7 +58,7 @@
     width: 100%;
 }
 
-.user-menu-drop-down li a:hover{
+.user-menu-drop-down-custom li a:hover{
     color: #0E56A4;
     /*background-color: rgba(237, 237, 237, 0.92);*/
 }
@@ -75,7 +76,7 @@
 }
 
 /*.top-menu .container .right{*/
-    /*max-width: 50%;*/
+/*max-width: 50%;*/
 /*}*/
 
 .top-menu--widget{
@@ -118,8 +119,10 @@
         float: none;
     }
 
-    .user-menu-drop-down{
+    .user-menu-drop-down-custom{
         right: -100%;
         /*left: auto;*/
     }
 }
+
+
